sentuhan dikit, munking sentuhan final

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     padding: 0;
 	margin: 0;
 	width: 100%;
-	background-color: rgba(229,229,229,1.00)
+	background-color: rgba(208,208,208,1.00)
 }
 
 .isi {
@@ -16,13 +16,13 @@ body {
 }
 
 header {
-	border-bottom: double 5px rgba(181,181,181,1.00);
-	width: 100%;
+	border-bottom: double 5px rgba(208,208,208,1.00);
 	background-color: rgba(255,255,255,1.00);
 	font-family: 'Lobster';
-	color: rgba(181,181,181,1.00);
+	color: rgba(124,146,255,1.00);
+	text-shadow: rgba(208,208,208,1.00) 3px 3px;
 	padding-bottom: 16px;
-	padding-top: 1px;
+	padding-top: 30px;
 }
 
 #contentheader {
@@ -33,8 +33,8 @@ header {
 
 #kucing {
 	width: 100%;
-	border-bottom: double 5px rgba(181,181,181,1);
-	margin: 0;
+	border-bottom: double 5px rgba(208,208,208,1);
+	margin-bottom: -7px;
 }
 
 #kucing img {
@@ -44,10 +44,10 @@ header {
 #profilmini {
 	background-color: rgba(255,255,255,1.00);
 	width: 25%;
-	padding: 30px 15px 15px 15px;
+	padding: 60px 15px 15px 15px;
 	float: right;
 	position: relative;
-	top: 18px;
+	top: 2px;
 }
 
 #fotoprofil img {
@@ -60,7 +60,9 @@ header {
 	padding: 0 15px 25px 15px;
 }
 
-
+#profilmini {
+	margin-top: 0;
+}
 
 #profilmini ul {
 	padding: 0px 0 0 0px;
@@ -142,10 +144,12 @@ header {
 
 .artikel p {
 	font-family: 'Hind';
-	width: 70%;
+	width: 65%;
+	text-indent: 10px;
 }
 
 .artikel ul {
+	margin-top: 0px;
 	padding-top: 15px;
 }
 
@@ -162,11 +166,12 @@ a:link {
 }
 
 a:visited {
-    text-decoration: none;
+	text-decoration: none;
 }
 
 a:hover {
     text-decoration: none;
+
 }
 
 a:active {
@@ -177,6 +182,6 @@ footer {
 	width: 100%;
 	text-align: center;
 	font-family: 'Hind';
-	color:rgba(141,141,141,1.00);
-	margin: 10px 0;
+	color:rgba(244,244,244,1.00);
+	margin: 50px 0 10px;
 }
