--- a/style.css
+++ b/style.css
@@ -163,19 +163,22 @@ img {
 
 a:link {
     text-decoration: none;
+	color: #000000;
 }
 
 a:visited {
 	text-decoration: none;
+	color: #000000;
 }
 
 a:hover {
     text-decoration: none;
-
+	color: #000000;
 }
 
 a:active {
     text-decoration: none;
+	color: #000000;
 }
 
 footer {
