update main page content

--- a/style.css
+++ b/style.css
@@ -235,46 +235,6 @@ a {
   color: #075bc9;
 }
 
-.skill .skill-meter {
-  position: relative;
-  height: 10px;
-  width: 100%;
-  background-color: #e3e3e3;
-  margin-top: 10px;
-  border-radius: 8px;
-}
-
-.skill .skill-meter .gauge {
-  height: 100%;
-  background: linear-gradient(107deg, #075bc9, #92baef);
-  width: 0;
-  transition: width 1s cubic-bezier(0.075, 0.82, 0.165, 1);
-  /* border-radius: 8px; */
-}
-
-.skill .skill-meter .thumb {
-  position: absolute;
-  bottom: calc(100% + 10px);
-  font-size: 12px;
-  left: 0;
-  background-color: #5299fc;
-  color: white;
-  font-weight: 600;
-  padding: 5px;
-  transition: left 1s cubic-bezier(0.075, 0.82, 0.165, 1);
-}
-
-.skill .skill-meter .thumb::before {
-  content: "";
-  position: absolute;
-  left: 5px;
-  top: calc(100% - 2px);
-  height: 8px;
-  width: 16px;
-  clip-path: polygon(0% 0%, 100% 0%, 50% 100%);
-  background-color: #5299fc;
-}
-
 .social-media {
   display: flex;
   flex-wrap: wrap;
@@ -295,28 +255,28 @@ a {
   color: white;
 }
 
-.social-media .sosmed:nth-child(1) {
+.social-media .sosmed.instagram {
   background: #d6249f;
   background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%,#285AEB 90%);
 }
 
-.social-media .sosmed:nth-child(2) {
+.social-media .sosmed.facebook {
   background-color: #3b5998;
 }
 
-.social-media .sosmed:nth-child(3) {
+.social-media .sosmed.twitter {
   background-color: #1da1f2;
 }
 
-.social-media .sosmed:nth-child(5) {
+.social-media .sosmed.linkedin {
   background-color: #0077b5;
 }
 
-.social-media .sosmed:nth-child(6) {
+.social-media .sosmed.github {
   background-color: #333;
 }
 
-.social-media .sosmed:nth-child(7) {
+.social-media .sosmed.codewars {
   background-color: #bb432c;
 }
 
